Date	Added

01/28
        * Fixed a typo that was causing /in to always report failure even when the
          name was removed from the ignore list [celest]
        * Link "wisexin", "wisexlist" and "wisall" to the PM ignore functions, and
         "friendslistadd" and "friendslistremove" to the friends list functions
          when parsing the packet DB [celest]
        * added clif_parse_PMIgnoreList (packet 0xd3) from jA [celest]
        * Added DUMP_ALL_PACKETS and moved dump packets code in clif_parse a bit to
          support it [celest]
        * Added base code for Party Item Sharing -- still needs some work in client-
          server support [celest]
	* new GC link http://amber.stormbirds.org/~joshs/gc6.4.tar.gz
	  This fixes some issues... works better
        * Added macros skill_chk and skill_get to check for out of bounds errors when
          retrieving info from the skill_db [celest]

01/27
        * Added memory leak fixes with temporary script variables and pets-related
          actions, by End_of_exam / jA 1109 [celest]
        * Kick all characters when the char server disconnects from the map
          server [celest]
        * Added @changelook command for spriters to test view ID's [celest]
        * Added a check to Pneuma to prevent crashing [celest]
        * Tweaked garbage collection code after feedback from users
        [SVN 1002: MouseJstr]
	* Fixed TRADE exploits (it cures proxy hack / vending+trade hack) thanks to Freya [Lupus]

01/26
        * Added bug fix for a memory leak caused when a character logs out,
          by End_of_exam / jA 1108 [celest]
        * Fixed a bug in gettick cache when compiling in Windows, thanks to Shinomori
          (jA 1094) [celest]
        * Added updates from jA 1092 [celest]
          - Changed "read_map_from_bitmap" to "read_map_from_cache",
            "map_bitmap_path" to "map_cache_file" in map_athena
          - Fixed item effects not showing when only one was used